[gd_scene load_steps=7 format=2]

[ext_resource path="res://add_rect232.png" type="Texture" id=1]
[ext_resource path="res://add_1rect237.png" type="Texture" id=2]
[ext_resource path="res://button_count.gd" type="Script" id=3]
[ext_resource path="res://ZH.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=1]

[node name="CountButton" type="Control"]
margin_left = 259.0
margin_top = 25.0
margin_right = 559.0
margin_bottom = 175.0
rect_min_size = Vector2( 300, 150 )
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 300.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 148.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "1"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_right = 148.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 1 )
icon_align = 1
expand_icon = true

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 148.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 2 )
icon_align = 1
expand_icon = true

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
